# NBodySimulation

./: CMakeLists.txt  README.md
depricated/: SimulationHandler.cpp  SimulationHandler.h
include/: Camera.h  Shader.h  Window.h
include/src/: Camera.h  EventDispatcher.h  GuiHandler.h  NewtonianSimulationHandler.h  Renderer.h  SimulationHandler.h  StructureGenerator.h  Window.h
src/: Camera.cpp  EventDispatcher.cpp  GuiHandler.cpp  NewtonianSimulationHandler.cpp  Renderer.cpp  Shader.cpp  SimulationHandler.cpp  StructureGenerator.cpp  Window.cpp  main.cpp
src/shaders/: NBody.comp  bil.frag  bil.geom  bil.vert
src/shaders/compute/: euler.comp  leapfrog1.comp  leapfrog2.comp  startTest.comp
